fix(bug): corrects tooltip hover misalignment on import flow and project summary space of create flow

--- a/src/app/launcher/import-app/project-summary-importapp-step/project-summary-importapp-step.component.less
+++ b/src/app/launcher/import-app/project-summary-importapp-step/project-summary-importapp-step.component.less
@@ -18,6 +18,10 @@
         &.with-tag {
           padding-bottom: 20px;
           position: relative;
+
+          .popover {
+            min-width: 250px;
+          }
         }
 
       }
