--- a/src/app/launcher/import-app/release-strategy-importapp-step/release-strategy-importapp-step.component.less
+++ b/src/app/launcher/import-app/release-strategy-importapp-step/release-strategy-importapp-step.component.less
@@ -33,6 +33,10 @@
         &.with-tag {
           padding-bottom: 20px;
           position: relative;
+
+          .popover {
+            min-width: 250px;
+          }
         }
 
       }
